[package]
name = "datatraveler"
version = "0.1.0"
authors = ["Karl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"
actix-files = "0.2.1"
actix-multipart = "0.2.0"
async-std = "1.4.0"
local_ipaddress = "0.1.3"